Fix [#4] use trim() removes whitespace from selected text both ends of a string Modify popup height to 600px Added keyboard shortcuts for activate the extension Rename dir src/images > src/icons Move readme images to resource dir

--- a/src/popup.css
+++ b/src/popup.css
@@ -2,7 +2,7 @@ html,
 body,
 iframe {
   width: 800px;
-  height: 550px;
+  height: 600px;
   padding: 0;
   margin: 0;
   border: none;
